--- a/accueil.html
+++ b/accueil.html
@@ -7,8 +7,6 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
@@ -38,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./accueil.html" class="active" title="">Accueil</a></li>
-          <li><a href="./goupes.html"title="">Groupes</a></li>
+          <li><a href="./groupe.html"title="">Groupes</a></li>
           <li><a href="./feufe.html" title="">À Propos</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
         </ul>
